[tool.poetry]
name = "backend"
version = "0.0.1"
description = "Backend"
authors = ["fastcode <fast.code.auth@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.23.1"
redis = "^4.5.4"
aiohttp = "^3.8.4"
setuptools = "68.0.0"
python-multipart = "^0.0.6"
asyncpg = "0.28.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
alembic = "^1.10.4"
jinja2 = "^3.1.2"
faker = "19.2.0"
arq = "^0.25.0"
fake-useragent = "^1.1.3"
fastapi = {extras = ["all"], version = "^0.100.0"}
pydantic-settings = "^2.0.2"
pydantic = "v2.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
websockets = "^11.0.3"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
